docs-archive/apache-airflow-providers-redis/4.1.1/_sources/_api/airflow/providers/redis/hooks/redis/index.rst.txt
airflow.providers.redis.hooks.redis
===================================

.. py:module:: airflow.providers.redis.hooks.redis

.. autoapi-nested-parse::

   RedisHook module.



Attributes
----------

.. autoapisummary::

   airflow.providers.redis.hooks.redis.DEFAULT_SSL_CERT_REQS
   airflow.providers.redis.hooks.redis.ALLOWED_SSL_CERT_REQS


Classes
-------

.. autoapisummary::

   airflow.providers.redis.hooks.redis.RedisHook


Module Contents
---------------

.. py:data:: DEFAULT_SSL_CERT_REQS
   :value: 'required'


.. py:data:: ALLOWED_SSL_CERT_REQS

.. py:class:: RedisHook(redis_conn_id = default_conn_name, **kwargs)

   Bases: :py:obj:`airflow.sdk.BaseHook`


   Wrapper for connection to interact with Redis in-memory data structure store.

   You can set your db in the extra field of your connection as ``{"db": 3}``.
   Also you can set ssl parameters as:
   ``{"ssl": true, "ssl_cert_reqs": "require", "ssl_certfile": "/path/to/cert.pem", etc}``.


   .. py:attribute:: conn_name_attr
      :value: 'redis_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'redis_default'



   .. py:attribute:: conn_type
      :value: 'redis'



   .. py:attribute:: hook_name
      :value: 'Redis'



   .. py:attribute:: redis_conn_id
      :value: 'redis_default'



   .. py:attribute:: redis
      :value: None



   .. py:attribute:: host


   .. py:attribute:: port


   .. py:attribute:: username


   .. py:attribute:: password


   .. py:attribute:: db


   .. py:method:: get_conn()

      Return a Redis connection.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for Redis connection.



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to Redis connection form.



