docs-archive/apache-airflow-providers-redis/4.7.0/_sources/_api/airflow/providers/redis/hooks/redis/index.rst.txt
airflow.providers.redis.hooks.redis
===================================

.. py:module:: airflow.providers.redis.hooks.redis

.. autoapi-nested-parse::

   RedisHook module.



Attributes
----------

.. autoapisummary::

   airflow.providers.redis.hooks.redis.DriverInfo
   airflow.providers.redis.hooks.redis.DEFAULT_SSL_CERT_REQS
   airflow.providers.redis.hooks.redis.ALLOWED_SSL_CERT_REQS
   airflow.providers.redis.hooks.redis.DEFAULT_REDIS_PORT


Classes
-------

.. autoapisummary::

   airflow.providers.redis.hooks.redis.RedisHook


Module Contents
---------------

.. py:data:: DriverInfo
   :value: None


.. py:data:: DEFAULT_SSL_CERT_REQS
   :value: 'required'


.. py:data:: ALLOWED_SSL_CERT_REQS

.. py:data:: DEFAULT_REDIS_PORT
   :value: 6379


.. py:class:: RedisHook(redis_conn_id = default_conn_name, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   Wrapper for connection to interact with Redis in-memory data structure store.

   You can set your db in the extra field of your connection as ``{"db": 3}``.
   Also you can set ssl parameters as:
   ``{"ssl": true, "ssl_cert_reqs": "require", "ssl_certfile": "/path/to/cert.pem", etc}``.

   To talk to a Redis deployment running in cluster mode, set ``{"cluster": true}``. Additional
   bootstrap nodes may be listed as Connection Extras
   ``{"startup_nodes": "node-2:6379,node-3:6379"}`` so that a single unreachable node does not
   leave the whole connection unusable. Cluster mode only supports database 0, so ``db`` must be
   left unset or 0.


   .. py:attribute:: conn_name_attr
      :value: 'redis_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'redis_default'



   .. py:attribute:: conn_type
      :value: 'redis'



   .. py:attribute:: hook_name
      :value: 'Redis'



   .. py:attribute:: redis_conn_id
      :value: 'redis_default'



   .. py:attribute:: redis
      :value: None



   .. py:attribute:: host


   .. py:attribute:: port


   .. py:attribute:: username


   .. py:attribute:: password


   .. py:attribute:: db


   .. py:attribute:: cluster


   .. py:attribute:: startup_nodes


   .. py:method:: get_conn()

      Return a Redis connection.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for Redis connection.



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to Redis connection form.



